# bandmc

./: CMakeLists.txt  README  bandmc.cc  wimgen.cc
dat/: edep_dist.root
include/: .RadGen.hh.swp  BAND.hh  CLAS.hh  DISGenerator.hh  ElectronFiducial.hh  GenTree.hh  IO.hh  LinkDef.hh  Radiation.hh  RandomGenerator.hh  Simulate.hh  Smearing.hh  constants.hh  crossdis.hh  crossincl.hh  deuteronwf.hh
radgen/: RadGen.cc  RadGen.hh  cmpcom.inc  mcpolrad.inc  options.inc  ppicom.inc  radgen.f  radgenkeys.inc
src/: BAND.cc  CLAS.cc  DISGenerator.cc  ElectronFiducial.cc  GenTree.cc  IO.cc  RadGen.cc  Radiation.cc  RandomGenerator.cc  Simulate.cc  Smearing.cc  crossdis.cc  crossincl.cc  deuteronwf.cc
src/fortran/: radgen.f
